# ai-from-first-principles

./: .gitignore  PROGRESS.md  README.md  ROADMAP.md  progress.json  pyproject.toml  setup.sh  track.py
notes/: TEMPLATE-week.md  week01.md  week02.md  weekly-notes.md
papers/: README.md  TEMPLATE-paper-summary.md
phase0-setup/: README.md
phase1-math/: README.md
phase1-math/week01-vectors-matrices/: #matrix_multiply.py#  .#matrix_multiply.py  README.md  matrix_multiply.py  test_matrix_multiply.py
phase1-math/week02-transformations/: README.md  vector_viz.py
phase1-math/week03-eigen/: README.md  pca_intuition.py
phase1-math/week04-gradients/: README.md  gradient_descent.py
phase1-math/week05-chain-rule/: README.md  manual_backprop.py
phase1-math/week06-probability/: README.md  coin_flips.py  test_coin_flips.py
phase1-math/week07-distributions/: README.md  distributions.py
phase1-math/week08-capstone-regression/: README.md  linear_regression.py  logistic_regression.py  test_models.py
phase10-advanced/: README.md
phase2-classical-ml/: README.md
phase2-classical-ml/week09-linear-regression/: README.md
phase2-classical-ml/week10-logistic-regression/: README.md
phase2-classical-ml/week11-decision-trees/: README.md
phase2-classical-ml/week13-kmeans/: README.md
phase3-neural-nets/: README.md
phase4-deep-learning/: README.md
phase5-transformers-llms/: README.md
phase6-llm-engineering/: README.md
phase7-rlhf/: README.md
phase8-agents/: README.md
phase9-research/: README.md
tracker/: README.md  package.json  schema.sql  wrangler.jsonc
(+25 files in other folders)
